--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -14,14 +14,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-        cache: maven
-        
+    - name: Checkout Code
+      uses: actions/checkout@v2  
+      
     - name: Build and deploy with maven
       run: mvn -B clean deploy -DmuleDeploy -s .maven/settings.xml
       env:
