--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v2 
       
     - name: Set Up JDK 11
-      uses: actions/setup-jaba@v2
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
