--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,44 +1,56 @@
-# This workflow will build a Java project with Maven, and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
+# This workflow will build a MuleSoft project and deploy to CloudHub
 
-name: Cloudhub deployment with Maven
+name: Build and Deploy to Sandbox
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
-jobs:
-  buildAndDeploy:
-    runs-on: ubuntu-latest 
-    environment: Prod
+    branches: [ main ]
+  workflow_dispatch:
     
-
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    env:
+      PLATFORM_USERNAME: ${{ secrets.PLATFORM_USERNAME }}
+      PLATFORM_PASSWORD: ${{ secrets.PLATFORM_PASSWORD }}
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+    
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      
-    - name: Cache Depenedencies
-      uses: actions/setup-java@v2
+    
+    - uses: actions/checkout@v2
+    
+    - uses: actions/cache@v1
       with:
-        java-version: '11'
-        distribution: 'adopt'
-        cache: maven
-        
-    - name: Build with maven
-      run: mvn -B clean package -s .maven/settings.xml   
-
-    - name: Upload Artifact
-      run: mkdir staging && cp target/*.jar staging
-      
-    - uses: actions/upload-artifact@v2
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        name: Package
-        path: staging
-      
-    - name: Deploy with maven
-      run: mvn -B deploy -DmuleDeploy -s .maven/settings.xml      
-      env:
-          PLATFORM_USERNAME: ${{ secrets.PLATFORM_USERNAME }}
-          PLATFORM_PASSWORD: ${{ secrets.PLATFORM_PASSWORD }}
+        java-version: 1.8
+    
+    - name: Build with Maven
+      run: mvn -B package --file pom.xml
+    
+    - name: Stamp artifact file name with commit hash
+      run: |
+        artifactName1=$(ls target/*.jar | head -1)
+        commitHash=$(git rev-parse --short "$GITHUB_SHA")
+        artifactName2=$(ls target/*.jar | head -1 | sed "s/.jar/-$commitHash.jar/g")
+        mv $artifactName1 $artifactName2
+    
+    - name: Upload artifact 
+      uses: actions/upload-artifact@master
+      with:
+          name: artifacts
+          path: target/*.jar
+    
+    - name: Slack Notification
+      uses: act10ns/slack@v1
+      with: 
+        status: ${{ job.status }}
+        channel: '#meetups'
+        message: Deployed {{ env.GITHUB_REF_NAME }} branch Successfully
+      if: always()  
