--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,5 +52,44 @@ jobs:
       with: 
         status: ${{ job.status }}
         channel: '#meetups'
-        message: Deployed {{ env.GITHUB_REF_NAME }} branch Successfully
+        message: Build {{ env.GITHUB_REF_NAME }} branch Successfully
       if: always()  
+      
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    env:
+      PLATFORM_USERNAME: ${{ secrets.PLATFORM_USERNAME }}
+      PLATFORM_PASSWORD: ${{ secrets.PLATFORM_PASSWORD }}
+      SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
+
+    steps:    
+    
+    - uses: actions/checkout@v2
+    
+    - uses: actions/cache@v1
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
+    
+    - uses: actions/download-artifact@master
+      with:
+        name: artifacts
+    
+    - name: Deploy to Sandbox
+      run: |
+        artifactName=$(ls *.jar | head -1)
+        mvn deploy -DmuleDeploy \
+         -Dmule.artifact=$artifactName \
+         -DskipTests
+         
+    - name: Notify Slack
+      uses: act10ns/slack@v1.2.2
+      with:
+          status: ${{ job.status }}
+          steps: ${{ toJson(steps) }}
+          channel: '#meetups'
+          message: Deployed {{ env.GITHUB_REF_NAME }} branch Successfully
+      if: always()
