--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -17,19 +17,15 @@ jobs:
     
     steps:
     
-    - uses: actions/checkout@v2
+    - name: Checkout repository
+      uses: actions/checkout@v2
     
-    - uses: actions/cache@v1
+    - name: Cache Depenedencies
+      uses: actions/setup-java@v2
       with:
-        path: ~/.m2/repository
-        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
-        restore-keys: |
-          ${{ runner.os }}-maven-
-    
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
+        java-version: '11'
+        distribution: 'adopt'
+        cache: maven
     
     - name: Build with Maven
       run: mvn -B package --file pom.xml
@@ -82,6 +78,7 @@ jobs:
       run: |
         artifactName=$(ls *.jar | head -1)
         mvn deploy -DmuleDeploy \
+         -s .maven/settings.xml \
          -Dmule.artifact=$artifactName \
          -DskipTests
          
