--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,27 @@
-name: publish to jfrog
+name: Build and Deploy to Sandbox
 
 on:
   push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
-
+    branches: [ main ]
+  workflow_dispatch:
+    
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
+    env:
+       run: jfrog rt config --interactive=false --user=${{ secrets.USERNAME }} --password=${{ secrets.PASSWORD }} --url=${{ secrets.https://strange.jfrog.io/ui/admin/projects/overview?projectKey=u22 }}
+    
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
+    
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    
+    - name: Cache Depenedencies
+      uses: actions/setup-java@v2
       with:
         java-version: '11'
-        distribution: 'temurin'
+        distribution: 'adopt'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-
-    - uses: jfrog/setup-jfrog-cli@v3
-        env:
-      - name: Log in to JFrog
-        run: jfrog rt config --interactive=false --user=${{ secrets.username }} --password=${{ secrets.password }} --url=${{ secrets.https://strange.jfrog.io/ui/admin/projects/overview?projectKey=u22 }}
-      - name: Publish artifacts
-        run: jfrog rt upload --recursive --regexp="target/*.jar" myrepo-local/
+    
+    - name: Build with maven
+      run: mvn -B clean package -s .maven/settings.xml
